[package]
name = "tokio-retry"
version = "0.2.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Extensible, asynchronous retry behaviours for futures/tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/srijs/rust-tokio-retry"
documentation = "https://docs.rs/tokio-retry"
keywords = ["futures", "tokio", "retry", "exponential", "backoff"]
edition = "2018"

[dependencies]
tokio = "0.1.22"
rand = "0.7.2"

[dev-dependencies]
quickcheck = "0.6.0"
